--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
+     "types": ["node"],
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+     
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
