--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-metrics",
   "private": true,
   "version": "0.0.0",
-  
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -12,13 +11,17 @@
   "dependencies": {
     "@babel/parser": "^7.27.5",
     "@babel/traverse": "^7.27.4",
-    "loadash": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "lodash": "^1.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -29,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "tailwindcss": "^3.3.5",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
