--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   "dependencies": {
     "@babel/parser": "^7.27.5",
     "@babel/traverse": "^7.27.4",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "lodash": "^1.0.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-validator": "^2.20.33",
+    "@types/helmet": "^0.0.48",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
