--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.1.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3"
