--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/parser": "^7.27.5",
     "@babel/traverse": "^7.27.4",
     "@google/genai": "^1.6.0",
+    "@microsoft/tsdoc": "^0.15.1",
     "axios": "^1.10.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.525.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "nspell": "^2.1.5",
