--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.1.10",
     "nspell": "^2.1.5",
     "react": "^19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3",
     "typewriter-effect": "^2.22.0"
