--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3",
-    "typewriter-effect": "^2.22.0"
+    "typewriter-effect": "^2.22.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
