--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "typewriter-effect": "^2.22.0",
     "zustand": "^5.0.6"
