--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "functions": {
-    "Backend/backend.ts": {
+    "api/backend.ts": {
       "includeFiles": "src/**"
     }
   },
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/Backend/backend.ts" },
+    { "source": "/api/(.*)", "destination": "/api/backend.ts" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
