--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "backend:dev": "cd api && npm install && ts-node backend.ts",
-    "build": "vite build",
-    "vercel-build": "vite build",
+    "backend:dev": "nodemon --watch \"Backend/**/*.ts\" --exec ts-node --project tsconfig.backend.json Backend/backend.ts",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -16,9 +15,17 @@
     "@google/genai": "^1.6.0",
     "@microsoft/tsdoc": "^0.15.1",
     "axios": "^1.10.0",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
     "dictionary-en": "^4.0.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
     "nspell": "^2.1.5",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
@@ -34,7 +41,14 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.25.0",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/express-validator": "^2.20.33",
+    "@types/helmet": "^0.0.48",
     "@types/lodash": "^4.17.0",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.0.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -44,6 +58,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "tailwindcss": "^3.3.5",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
